force-app/main/default/objects/ParcelaFinanceira__c/ParcelaFinanceira__c.object-meta.xml
<CustomObject>
    <description>Parcelas financeiras a serem faturadas (integração Conta Azul).</description>
    <label>Parcela Financeira</label>
    <nameField>
        <displayFormat>PAR-{00000}</displayFormat>
        <label>ID Parcela</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas Financeiras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>