force-app/main/default/objects/ParcelaFinanceira__c/fields/Competencia__c.field-meta.xml
<CustomField>
    <fullName>Competencia__c</fullName>
    <label>Competência de Referência</label>
    <type>Date</type>
</CustomField>