force-app/main/default/objects/ParcelaFinanceira__c/fields/IDContaAzul__c.field-meta.xml
<CustomField>
    <fullName>IDContaAzul__c</fullName>
    <description>ID único da parcela no Conta Azul para evitar duplicatas.</description>
    <externalId>true</externalId>
    <label>ID Conta Azul</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>