force-app/main/default/objects/ParcelaFinanceira__c/fields/SaldoAberto__c.field-meta.xml
<CustomField>
    <fullName>SaldoAberto__c</fullName>
    <formula>Valor__c - ValorDistribuido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo em Aberto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>