force-app/main/default/objects/ParcelaFinanceira__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <description>Serviço vinculado a esta parcela.</description>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Parcelas Financeiras</relationshipLabel>
    <relationshipName>ParcelasFinanceiras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>