force-app/main/default/objects/ParcelaFinanceira__c/fields/ValorDistribuido__c.field-meta.xml
<CustomField>
    <fullName>ValorDistribuido__c</fullName>
    <description>Soma total já distribuída para orçamentos de competência.</description>
    <label>Valor Distribuído</label>
    <summarizedField>DistribuicaoReceita__c.ValorDistribuido__c</summarizedField>
    <summaryForeignKey>DistribuicaoReceita__c.ParcelaFinanceira__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>