force-app/main/default/objects/ParcelaFinanceira__c/fields/ValorFaturar__c.field-meta.xml
<CustomField>
    <fullName>ValorFaturar__c</fullName>
    <label>Valor a faturar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>