force-app/main/default/objects/ParcelaFinanceira__c/fields/VendaContaAzul__c.field-meta.xml
<CustomField>
    <fullName>VendaContaAzul__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venda Conta Azul</label>
    <referenceTo>VendaContaAzul__c</referenceTo>
    <relationshipLabel>Parcelas Financeiras</relationshipLabel>
    <relationshipName>ParcelasFinanceiras</relationshipName>
    <type>Lookup</type>
</CustomField>